--- a/tasks/file_edited.yml
+++ b/tasks/file_edited.yml
@@ -65,6 +65,11 @@
             var: systemd_section
             verbosity: 2
 
+        - name: Debug systemd_section type
+          ansible.builtin.debug:
+            msg: "{{ systemd_section | type_debug }]"
+            verbosity: 2
+
         - name: Systemd unit file edited
           community.general.ini_file:
             path: "{{ systemd_file.path }}"
