Add tasks to rm broken and /dev/null symlinks #4

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,16 @@
+# Copyright 2022-2023 Chris Croome
+#
+# This file is part of the Webarchitects systemd Ansible role.
+#
+# The Webarchitects systemd Ansible role is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+#
+# The Webarchitects Ansible role is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License along with the Webarchitects systemd Ansible role. If not, see <https://www.gnu.org/licenses/>.
 ---
 systemd: true
+systemd_delete_broken_symlinks: false
+systemd_delete_devnull_symlinks: false
 systemd_timesyncd_reboot: false
 systemd_tz: Etc/UTC
 systemd_units:
