--- a/meta/argument_specs.yml
+++ b/meta/argument_specs.yml
@@ -1,3 +1,12 @@
+# Copyright 2022-2023 Chris Croome
+#
+# This file is part of the Webarchitects systemd Ansible role.
+#
+# The Webarchitects systemd Ansible role is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+#
+# The Webarchitects Ansible role is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License along with the Webarchitects systemd Ansible role. If not, see <https://www.gnu.org/licenses/>.
 ---
 argument_specs:
   main:
@@ -9,6 +18,14 @@ argument_specs:
         type: bool
         required: true
         description: Run the tasks in this role.
+      systemd_delete_broken_symlinks:
+        type: bool
+        required: true
+        description: Delete broken symlinks found in the /etc/systemd directory.
+      systemd_delete_devnull_symlinks:
+        type: bool
+        required: true
+        description: Delete symlinks that point to /dev/null in the /etc/systemd directory.
       systemd_units:
         type: list
         required: false
