--- a/tasks/unit_present.yml
+++ b/tasks/unit_present.yml
@@ -1,3 +1,12 @@
+# Copyright 2022-2023 Chris Croome
+#
+# This file is part of the Webarchitects systemd Ansible role.
+#
+# The Webarchitects systemd Ansible role is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+#
+# The Webarchitects Ansible role is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License along with the Webarchitects systemd Ansible role. If not, see <https://www.gnu.org/licenses/>.
 ---
 - name: Systemd unit configuration
   block:
@@ -51,7 +60,7 @@
         - name: Include flush handlers task prior to setting the unit state
           ansible.builtin.include_tasks: flush_handlers.yml
 
-        - name: Unit state set
+        - name: Unit state set  # noqa args[module]
           ansible.builtin.systemd:
             name: "{{ systemd_unit.name }}"
             state: "{{ systemd_unit.unit_state | default('started') }}"
