--- a/tasks/check_depth_one.yml
+++ b/tasks/check_depth_one.yml
@@ -16,10 +16,21 @@
         systemd_dictionary_depth: 0
         systemd_dictionary_depth_two: []
 
+    - name: Debug depth test one types
+      ansible.builtin.debug:
+        msg: "systemd_dict_value is type {{ systemd_dict_value | type_debug }}"
+        verbosity: 2
+      loop: "{{ systemd_dictionary | ansible.builtin.dict2items | community.general.json_query('[].value') }}"
+      loop_control:
+        loop_var: systemd_dict_value
+        label: "{{ systemd_dict_value }}"
+
     - name: Set fact when systemd_dictionary depth == 1
       ansible.builtin.set_fact:
         systemd_dictionary_depth: 1
-      when: systemd_dict_value | ansible.builtin.type_debug != "dict"
+      when:
+        - systemd_dict_value | ansible.builtin.type_debug != "dict"
+        - systemd_dict_value | ansible.builtin.type_debug != "list"
       loop: "{{ systemd_dictionary | ansible.builtin.dict2items | community.general.json_query('[].value') }}"
       loop_control:
         loop_var: systemd_dict_value
