--- a/tasks/check_depth_three.yml
+++ b/tasks/check_depth_three.yml
@@ -15,10 +15,22 @@
       ansible.builtin.debug:
         var: systemd_dictionary_depth_two
 
+    - name: Debug depth test two type
+      ansible.builtin.debug: 
+        msg: "systemd_dict_value is type {{ systemd_dict_value | type_debug }}"
+        verbosity: 2
+      when: systemd_dict_value | ansible.builtin.type_debug == "dict"
+      loop: "{{ systemd_dictionary_depth_two | community.general.json_query('[]') }}"
+      loop_control:
+        loop_var: systemd_dict_value
+        label: "{{ systemd_dict_value }}"
+
     - name: Set fact when systemd_file.conf depth > 2
       ansible.builtin.set_fact:
         systemd_dictionary_depth: 3
-      when: systemd_dict_value | ansible.builtin.type_debug == "dict"
+      when:
+        - systemd_dict_value | ansible.builtin.type_debug == "dict"
+        - systemd_dict_value | ansible.builtin.type_debug == "list"
       loop: "{{ systemd_dictionary_depth_two | community.general.json_query('[]') }}"
       loop_control:
         loop_var: systemd_dict_value
