--- a/tasks/file_present.yml
+++ b/tasks/file_present.yml
@@ -109,7 +109,7 @@
                 var: systemd_file_sections
                 verbosity: 2
 
-          when: systemd_file_depth == 2
+          when: systemd_conf_depth == 2
 
         - name: Backup copy of the existing systemd unit file present
           ansible.builtin.copy:
