Fix change depth

--- a/tasks/file_present.yml
+++ b/tasks/file_present.yml
@@ -93,9 +93,10 @@
               - systemd_file_depth is regex('^1|2$')
             quiet: "{% if ansible_verbosity == 0 %}true{% else %}false{% endif %}"
 
-        - name: "Warn that the variable depth is to be changed for {{ systemd_file.path }}"
-          ansible.builtin.debug:
-            msg: "The existing variable depth is {{ systemd_file_depth }} and the proposed variable depth is {{ systemd_conf_depth }}"
+        - name: Fail as the variable depth is to be changed
+          ansible.builtin.fail:
+            msg: "The {{ systemd_file.path }} file needs to be templated not edited as the variable depth is to be changed"
+          when: systemd_file_depth != systemd_conf_depth
 
         - name: Conditionally set a variable with the list of sections
           block:
